--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,16 @@ body {
    border: 5px #FD4 solid;
 }
 
+.characters .item .like {
+   color: #FD4;
+   cursor: pointer;
+}
+
+.characters .item .delete {
+   color: #f65;
+   cursor: pointer;
+}
+
 input {
    padding: 0.75em 1.25em;
    border-radius: 8px;
